--- a/plugins/SexyPlugins/CornHub/config.ini
+++ b/plugins/SexyPlugins/CornHub/config.ini
@@ -4,6 +4,6 @@ min_core: 0
 max_core: 0
 client_type:
 bins:
-envs: GOOGLE_CHROME_BIN, GOOGLE_CHROME_DRIVER
-packages: aiofiles, selenium, fake-headers
+envs: 
+packages: aiofiles
 depends:
